File was upgraded again.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="other-lang">
-            <p>Other Languages you can use Google:<a href="#">English</a></p>
+            <p>Other Languages you can use Google:<a href="#">Türkçe</a></p>
         </div>
         
     </main>
